--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.11.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
+    "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "rehype-highlight": "^7.0.2",
+    "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "remark-prism": "^1.3.6",
+    "remark-rehype": "^11.1.2",
     "sass": "^1.89.2",
     "tailwind-merge": "^3.3.1"
   },
